fixed mr spacing in index.html. Added 3 images to book scroll.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,12 @@ html {
     background-color: rgb(33, 211, 211, 1);
 }
 
+/*--Images--*/
+
+.book-images {
+    width: 10%;
+}
+
 /*--Footer--*/
 
 .footer {
